thrid new feature

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 <h1>This is another new feature</h1> 
 
+<h1>This is the third new feature</h1>
+
 <p>This is paragraph1</p> 
 
 <p>This is paragraph2</p> 
